--- a/back_crm/package.json
+++ b/back_crm/package.json
@@ -10,17 +10,18 @@
     "seed": "node src/scripts/seed.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
-    "sequelize": "^6.35.1",
+    "bull": "^4.11.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.1",
     "socket.io": "^4.7.2",
-    "winston": "^3.11.0",
-    "bull": "^4.11.3",
-    "helmet": "^7.1.0"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
